# libcst-code-mods

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  refactoring-rules-config.yaml  ruff.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: ci_tests.yaml
_sources/: index.rst.txt
docs/: Makefile
docs/source/: conf.py  index.rst
mock_package/after/src/: file_1.py
mock_package/before/src/: file_1.py  file_2.py
scripts/: create_compiler_style_test_case.py  create_test_case.py  generate_docstrings_from_tests.py  visitor_helpers.py
src/libcst_code_mods/: __main__.py  apply.py  constants.py  engine.py  filters.py  matchers.py  node_collector.py  transform.py  transform_v2.py  transformer.py  transformers.py  utils.py
src/libcst_code_mods/core/: base_cst_transformer.py  base_cst_visitor.py  cst_context.py  cst_rule.py  matchers.py  (+1 more)
tests/: __init__.py  conftest.py  test-refactoring-rules-config.yaml  test_main.py  test_matchers.py  test_transformers.py  test_utils.py
tests/rules/: test_cst_to_matcher.py
tests/test_examples/: calls_print.py  class_single_method.py  function_nested_function.py  function_nested_raises.py  function_raises_exception.py  function_single_line.py  global_assignment_with_type_hint.py  print_with_fstring.py
tests/transformers/: test_convert_function_signature.py  test_rename_variable_of_type.py  test_replace_param_type_hint.py  test_replace_return_type_hint.py  test_transformers.py
(+115 files in other folders)
